--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">ImgUploader</h1><br><h5 class="center blue-text">感谢由贴图库提供的非结构图像数据存储服务。</h5><br><h6 class="center blue-text">『现设置：上传至可用区 galvingao.i1.tietuku.global.storage.tietukuservices』</h6><br><br><br>
+      <h1 class="header center orange-text">Uploader</h1><br><h5 class="center blue-text">感谢贴图库提供非结构图像数据存储服务</h5><br><h6 class="center blue-text">将上传至可用区 galvingao.i1.tietuku.global.storage.tietukuservices</h6><br><br><br>
       <div class="row center">
           
           <div class="input-field col s12 m8 l6">
