--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Uploader</h1><br><h5 class="center blue-text">感谢贴图库提供非结构图像数据存储服务</h5><br><h6 class="center blue-text">将上传至可用区 galvingao.i1.tietuku.global.storage.tietukuservices</h6><br><br><br>
+      <h1 class="header center orange-text">Uploader</h1><br><h5 class="center blue-text">感谢贴图库提供非结构图像数据存储服务</h5><br><h6 class="center grey-text">将上传至可用区 galvingao.i1.tietuku.bkt.tietukuservices</h6><br><br><br>
       <div class="row center">
           
           <div class="input-field col s12 m8 l6">
@@ -32,7 +32,7 @@
 
           <!-- -->
 
-          <a style ="cursor:pointer center" onclick="tietuku_upload()" class="center waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>upload</a>
+          <a style ="cursor:pointer center" onclick="tietuku_upload()" class="center waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>点我上传咯咯咯～</a>
 
           <script language = "javascript" type = "text/javascript"  src="http://static.tietuku.com/static/open/tietuku.jquery.min.js"></script><script language = "javascript" type = "text/javascript"  src="http://static.tietuku.com/static/open/tietuku.dialog.js"></script><script>var jq=jQuery.noConflict();function tietuku_upload(){jq.dialog.showIframeDialog(850, '', '<iframe frameborder="0" width="824" height="460" marginheight="0" marginwidth="0"  src="http://static.tietuku.com/upByPlugn?token=90e0524dfe110b521d1e578a73f5cd55c39957f8:KjSoY8y2rFrT2DGgvnKo_vh5itE=:eyJkZWFkbGluZSI6MTQ4MTI1Nzc4NCwiYWN0aW9uIjoiZ2V0IiwidWlkIjoiNTU4ODMxIiwiYWlkIjoiMTIyMTUwNyIsImZyb20iOiJmaWxlIn0=&ifr=1&"></iframe>');}var $=jQuery.noConflict();</script>
 
